2009-09-30  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/winWm.test: [Bug 2799589] grab on deleted window.

2009-09-25  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkImgPhoto.c (ImgGetPhoto): Correct generation of grayscale
	data from an image. Reported by Keith Vetter on comp.lang.tcl.

2009-09-19  Peter Spjuth  <peter.spjuth@gmail.com>

	* generic/tkGrid.c:	[Bug 2859912]: Bug fix in grid/pack collision
	* generic/tkPack.c:	detect. Faulty slave was not properly blocked
	* tests/packgrid.test:	from slave list.

2009-09-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkMenuDraw.c (TkPostSubmenu): [Bug 873613]: Fix reposting of
	* win/tkWinMenu.c (TkWinHandleMenuEvent): submenu in torn off Windows
	menu.
	(DrawMenuEntryArrow): [Bug 873608]: Draw Win menu arrow after being
	torn off.

2009-09-09  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixRFont.c (InitFont): Move pattern disposal in error case
	to callers so they have more options when they come to recovering from
	the failure.
	(TkpGetFontFromAttributes): If the default attributes don't work, try
	adding a setting to turn off use of XRender. That seems to work for
	some people for unexplained reasons (possibly local misconfiguration).
	* generic/tkFont.c (Tk_AllocFontFromObj): Stop this function from
	keeling over in a heap when the low-level font allocation fails. An
	error beats a crash! (Issue reported on comp.lang.tcl by Denis
	Berezhnoy.)

2009-09-07  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tkFocus.c:	fix potential null dereference flagged by clang
	* generic/tkMenu.c:	static analyzer.
	* generic/tkTextBTree.c:
	* generic/tkTextDisp.c:
	* generic/tkTextIndex.c:

	* generic/tkConsole.c:	silence false positives from clang static
	* generic/tkTest.c:	analyzer about potential null dereference.
	* generic/tkText.c:
	* generic/tkTextBTree.c:
	* generic/tkTextTag.c:
	* generic/tkVisual.c:

2009-09-04  Donal K. Fellows  <dkf@users.sf.net>
